--- a/.editorconfig
+++ b/.editorconfig
@@ -10,3 +10,9 @@ end_of_line = lf
 insert_final_newline = true
 indent_size = 2
 indent_style = tab
+
+[*.yml]
+end_of_line = lf
+insert_final_newline = true
+indent_size = 2
+indent_style = space
